# llm-inference-lab

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: quant-sweep-0.5b.yaml  quant-sweep.yaml
docs/: running-on-cuda.md  running-on-greatlakes.md
docs/superpowers/plans/: 2026-07-14-llm-inference-lab.md
docs/superpowers/specs/: 2026-07-14-llm-inference-lab-design.md
results/: qwen0.5b.json
scripts/: greatlakes.sbatch  run.py
src/inference_lab/: __init__.py  config.py  metrics.py  report.py  runner.py
src/inference_lab/backends/: __init__.py  base.py  fake.py  llama_cpp.py
tests/: test_base.py  test_config.py  test_fake_backend.py  test_llama_smoke.py  test_metrics.py  test_report.py  test_runner.py
