[project]
name = "inference-lab"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = ["pyyaml>=6", "matplotlib>=3.8"]

[project.optional-dependencies]
dev = ["pytest>=8"]
llama = ["llama-cpp-python>=0.3"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/inference_lab"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
